bug fix attempt 3